--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "bn-curves"
-version = "0.1.0"
-edition = "2021"
+version = "0.1.1-rc.0"
+edition = "2024"
 authors = ["Paulo L. Barreto"]
 license = "MIT OR Apache-2.0"
-description = "A framework for pairing-based cryptography using BN curves"
+description = "A pure Rust framework for pairing-based cryptography using BN curves"
 readme = "README.md"
 homepage = "https://github.com/pbarreto-crypto"
 repository = "https://github.com/pbarreto-crypto/bn-curves"
@@ -17,3 +17,6 @@ rand = "0.9.2"
 sha3 = "0.11.0-rc.0"
 
 [lib]
+
+[[example]]
+name = "blmq"
