--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bn-curves"
-version = "0.1.1-rc.1"
+version = "0.1.3"
 edition = "2024"
 authors = ["Paulo L. Barreto"]
 license = "MIT OR Apache-2.0"
@@ -12,9 +12,9 @@ keywords = ["bilinear-pairings", "BN-curves", "Barreto-Naehrig"]
 categories = ["algorithms", "cryptography"]
 
 [dependencies]
-crypto-bigint = { version = "0.7.0-rc.0", features = ["alloc"] }
+crypto-bigint = { version = "=0.7.0-rc.6", features = ["alloc"] }
 rand = "0.9.2"
-sha3 = "0.11.0-rc.0"
+sha3 = "=0.11.0-rc.3"
 
 [[bin]]
 name = "bnparamgen"
